Add duck behavior and connect it with a duck animation

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Behaviors\AbstractBehavior.cs" />
+     <Compile Include="Assets\Scripts\Behaviors\Duck.cs" />
      <Compile Include="Assets\Scripts\Behaviors\FaceDirection.cs" />
      <Compile Include="Assets\Scripts\Behaviors\Jump.cs" />
      <Compile Include="Assets\Scripts\Behaviors\LongJump.cs" />
